--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-document-picker": "^9.3.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-password-eye": "^1.0.5",
     "react-native-phone-number-input": "^2.1.0",
