--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -12,6 +12,26 @@
     {
       "path": "src/assets/fonts/OpenSans-Semibold.ttf",
       "sha1": "f1ee7a9c6d13ee2d642a806c09e737275e613792"
+    },
+    {
+      "path": "src/assets/fonts/Urbanist-Bold.ttf",
+      "sha1": "4b1d8478efaf85885d9a28dc7ce3bf284954ad74"
+    },
+    {
+      "path": "src/assets/fonts/Urbanist-Light.ttf",
+      "sha1": "9a0e61b3651f244833a615c1bbe6bfafd1751d47"
+    },
+    {
+      "path": "src/assets/fonts/Urbanist-Medium.ttf",
+      "sha1": "9bb53879be3392a25662f7c64f0ce82efca29f14"
+    },
+    {
+      "path": "src/assets/fonts/Urbanist-Regular.ttf",
+      "sha1": "8f8e7875b240df7149e499e2abc4f48f13ccefd0"
+    },
+    {
+      "path": "src/assets/fonts/Urbanist-SemiBold.ttf",
+      "sha1": "268c9395bb18d26989b24b5249779318d1f95c22"
     }
   ]
 }
