--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-password-eye": "^1.0.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
-    "react-native-svg": "^15.9.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-screens": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
