--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.1.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-bootsplash": "^6.3.2",
     "react-native-document-picker": "^9.3.1",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
