--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.0.7",
+    "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
     "react": "18.3.1",
@@ -21,6 +22,8 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-pager-view": "^6.6.1",
     "react-native-password-eye": "^1.0.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.14.0",
